--- a/MoreGolfers.csproj
+++ b/MoreGolfers.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <AssemblyName>MoreGolfers</AssemblyName>
+        <AssemblyName>Sulayre.MoreGolfers</AssemblyName>
         <Product>More Golfers</Product>
         <Version>1.0.1</Version>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
